patchValue ile control değerlerini atadım

--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.html
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.html
@@ -1,63 +1,58 @@
 <h3 class="mt-2">Rezervasyon Ekle</h3>
-
 <form [formGroup]="rezForm" class="form-group">
-<div class="container mt-4">
-  <div class="row">
-    <div *ngFor="let adult of adultArray" class="col-md-6 ">
-      <div class="form-group input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text"> Yetişkin </span>
+    <div class="container mt-4">
+        <div class="row">
+            <input type="hidden" class="form-control mt-2" formControlName="hotelName" placeholder="Hotel Adı" [(ngModel)]="hotelName">
+            <input type="text" class="form-control mt-2" formControlName="price" placeholder="Fiyat" [(ngModel)]="price">
+            <input type="text" class="form-control mt-2" formControlName="checkInDate" placeholder="Giriş Tarihi" [(ngModel)]="checkInDate">
+            <input type="text" class="form-control mt-2" formControlName="payDate" placeholder="Çıkış Tarihi" [(ngModel)]="payDate">
+            <input type="text" class="form-control mt-2" formControlName="duration" placeholder="Süre" [(ngModel)]="duration">
+            <input type="text" class="form-control mt-2" formControlName="roomName" placeholder="Oda Tipi" [(ngModel)]="roomName">
         </div>
-        <input class="form-control" formControlName="nameSurname" placeholder="Adı Soyadı" type="text"/>
-      </div>
     </div>
-  </div>
-  
-<div>
-  <div class="row">
-    <div *ngFor="let adult of adultArray" class="col-md-6">
-      <div class="form-group input-group">
-        <div class="input-group-prepend ">
-          <span class="input-group-text">Yetişkin</span>
+    <div class="container mt-4">
+        <div class="row">
+            <div formArrayName="adultArray" *ngFor="let adult of rezForm.controls.adultArray?.value; let i = index" class="col-md-6 ">
+                <ng-container [formGroupName]="i">
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> Yetişkin </span>
+                        </div>
+                        <input class="form-control" formControlName="nameSurname" placeholder="Adı Soyadı" type="text" />
+                    </div>
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend ">
+                            <span class="input-group-text">Yetişkin</span>
+                        </div>
+                        <input class="form-control" formControlName="birthday" placeholder="Doğum Tarihi" type="text" />
+                    </div>
+                </ng-container>
+            </div>
         </div>
-        <input class="form-control" formControlName="birthday" placeholder="Doğum Tarihi" type="text"/>
-      </div>
     </div>
-  </div>
-</div>
-</div>
+    <div class="container mt-4">
+        <div class="row">
+            <div formArrayName="childArray" *ngFor="let chd of rezForm.controls.childArray?.value; let i = index" class="col-md-6">
+                <ng-container [formGroupName]="i">
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Çocuk</span>
+                        </div>
+                        <input class="form-control" formControlName="nameSurname" placeholder="Adı Soyadı" type="text" />
+                    </div>
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Çocuk</span>
+                        </div>
+                        <input class="form-control" formControlName="birthday" placeholder="Doğum Tarihi" />
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-success mt-4" (click)="add()">Kaydet</button>
 
-<div class="container mt-4">
-  <div class="row">
-    <div *ngFor="let chd of childArray" class="col-md-6">
-      <div class="form-group input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Çocuk</span>
         </div>
-        <input class="form-control" formControlName="nameSurname" placeholder="Adı Soyadı" type="text"/>
-      </div>
     </div>
-  </div>
-  <div class="row">
-    <div *ngFor="let chd of childArray" class="col-6">
-      <div class="form-group input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Çocuk</span>
-        </div>
-        <input class="form-control" formControlName="birthday" placeholder="Doğum Tarihi" type="text"/>
-      </div>
-    </div>
-        <input type="hidden" class="form-control mt-2" formControlName="hotelName" placeholder="Hotel Adı" [(ngModel)]="hotelName">
-        <input type="text" class="form-control mt-2"  formControlName="price" placeholder="Fiyat" [(ngModel)]="price"> 
-        <input type="text" class="form-control mt-2" formControlName="checkInDate" placeholder="Giriş Tarihi" [(ngModel)]="checkInDate">
-        <input type="text" class="form-control mt-2" formControlName="payDate" placeholder="Çıkış Tarihi" [(ngModel)]="payDate">
-        <input type="text" class="form-control mt-2" formControlName="duration" placeholder="Süre" [(ngModel)]="duration">
-        <input type="text" class="form-control mt-2" formControlName="roomName" placeholder="Oda Tipi" [(ngModel)]="roomName"> 
-  </div>
-  <div> 
-      <button type="submit" class="btn btn-success mt-4" (click)="add()">Kaydet</button>
-      
-  </div>
-</div>   
 </form>
-  
+
