--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.html
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.html
@@ -1,8 +1,9 @@
+
 <h3 class="mt-2">Rezervasyon Ekle</h3>
-<form [formGroup]="rezForm" class="form-group">
+<form [formGroup]="rezForm" class="form-group" >
     <div class="container mt-4">
         <div class="row">
-            <input type="hidden" class="form-control mt-2" formControlName="hotelName" placeholder="Hotel Adı" [(ngModel)]="hotelName">
+            <input type="text" class="form-control mt-2" formControlName="hotelName" placeholder="Hotel Adı" [(ngModel)]="hotelName" >
             <input type="text" class="form-control mt-2" formControlName="price" placeholder="Fiyat" [(ngModel)]="price">
             <input type="text" class="form-control mt-2" formControlName="checkInDate" placeholder="Giriş Tarihi" [(ngModel)]="checkInDate">
             <input type="text" class="form-control mt-2" formControlName="payDate" placeholder="Çıkış Tarihi" [(ngModel)]="payDate">
@@ -51,7 +52,6 @@
         </div>
         <div>
             <button type="submit" class="btn btn-success mt-4" (click)="add()">Kaydet</button>
-
         </div>
     </div>
 </form>
