--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/hotel/hotel.component.css
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/hotel/hotel.component.css
@@ -3,21 +3,44 @@
     color: chocolate;
 }
 
-.rez {
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.example-full-width {
+    width: 100%;
+}
+
+
+
+
+
+/*.rez {
     padding: 10px;
     height: 100%;
     width: 630px;
     border-color: chartreuse;
     border-style: solid;
     border-width: 5px;
-    border-color:coral;
+    border-color: coral;
 }
+
 #hotelName {
     margin-bottom: 20px;
-    width:600px;
-    height:35px;
-    text-align:center;
+    width: 300px;
+    height: 35px;
+    text-align: center;
 }
+
+#regionName {
+    margin-bottom: 20px;
+    width: 300px;
+    height: 35px;
+    text-align: center;
+}
+
 
 #entry {
     margin-bottom: 10px;
@@ -56,19 +79,19 @@
 
 
 .custom-select {
-    display:inline-block;
-    width:200px;
+    display: inline-block;
+    width: 200px;
 }
 
 #lblAdults {
-    color:darkorange;
+    color: darkorange;
 }
 
 #lblChilds {
-    color:darkorange;
-    padding-left:175px;
+    color: darkorange;
+    padding-left: 175px;
 }
 
 #chdAge {
-    color:darkorange
-}
+    color: darkorange
+}*/
