--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.css
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/rezervasyon/rezervasyon.component.css
@@ -1,13 +1,24 @@
-h3{
+h3 {
     text-align: center;
     margin-top: 5px;
 }
-.list-group-item{
+
+.list-group-item {
     height: 60px;
     width: 100px;
 }
 
-h5{
+h5 {
     text-align: center;
+}
+
+button {
+    width: 100px;
+    height: 50px;
+}
+
+#clsbtn {
+    position: static;
+    margin-left: auto;
 }
 
