--- a/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/hotel/hotel.component.css
+++ b/KodYazilim.HotelReservation.CoreMVC.Angular/ClientApp/src/app/hotel/hotel.component.css
@@ -1,8 +1,4 @@
-﻿h3 {
-    padding-left: 150px;
-    color: chocolate;
-}
-
+﻿
 .example-form {
     min-width: 150px;
     max-width: 500px;
@@ -14,84 +10,13 @@
 }
 
 
-
-
-
-/*.rez {
-    padding: 10px;
-    height: 100%;
-    width: 630px;
-    border-color: chartreuse;
-    border-style: solid;
-    border-width: 5px;
-    border-color: coral;
-}
-
-#hotelName {
-    margin-bottom: 20px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-#regionName {
-    margin-bottom: 20px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-
-#entry {
-    margin-bottom: 10px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-#exit {
-    margin-bottom: 10px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-#adult {
-    margin-bottom: 10px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-#child {
-    margin-bottom: 10px;
-    width: 300px;
-    height: 35px;
-    text-align: center;
-}
-
-#search {
-    margin-top: 20px;
-    width: 600px;
-    height: 35px;
-    text-align: center;
-}
-
-
 .custom-select {
     display: inline-block;
     width: 200px;
 }
 
-#lblAdults {
-    color: darkorange;
+#btnMenu {
+    margin-top:15px;
+    margin-left: 150px;
+    position: center;
 }
-
-#lblChilds {
-    color: darkorange;
-    padding-left: 175px;
-}
-
-#chdAge {
-    color: darkorange
-}*/
